# Research-and-Ranking-Dashboard-V1

./: .gitignore  README.md  index.html
investment-dashboard/: .gitignore  ADD_TICKER.md  BUILD_NOTES.md  Makefile  README.md  add_ticker.py  audit_dashboard.py  backfill_mcs_claims.py  backfill_to_mu_parity.py  baseline_audit.md  build_bundle.py  fill_quarter_fields.py  fix_legacy_options.py  generate_data.py  generate_horizon_views.py  index.html  lens_score_overrides.py  pyproject.toml  refresh_all_lens_scores.py
investment-dashboard/assets/: app.js  styles.css
investment-dashboard/dashboard_build/: audit.py  confidence.py  config.py  emit.py  equivalence.py  extract_chart_pngs.py  extract_from_monolith.py  extract_inline_consts.py  extract_via_node.js  ingest.py  safeguards.py  schema.py  scoring.py  validate.py  verify.py
investment-dashboard/data/: _categories.json  _meta.json  _registry.json  dashboard-data.js  dashboard-data.json  lens_rationale.json  tickers-bundle.js
investment-dashboard/data/companies/: AAPL.json  ABNB.json  ADI.json  AMAT.json  AMD.json  AMZN.json  ANET.json  APP.json  ARM.json  ASML.json  AVGO.json  AZN.json  BA.json  BABA.json  BAC.json  BRKB.json  CAH.json  CDNS.json  CEG.json  COHR.json  COIN.json  COST.json  CRDO.json  CRWD.json  CSCO.json  CVX.json  DASH.json  DDOG.json  DE.json  DELL.json  DKNG.json  DRI.json  FANG.json  FDX.json  FSLR.json  (+59 more)
investment-dashboard/tests/: conftest.py  test_audit.py  test_confidence.py  test_emit_js.py  test_equivalence.py  test_file_separation.py  test_schema.py  test_scoring.py  test_validate.py
(+516 files in other folders)
