[project]
name = "investment-dashboard"
version = "1.0.0"
description = "Modular static investment-research priority dashboard."
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "ruff==0.5.0",
  "mypy==1.10.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",   # line length — readability over hard wraps in docstrings
  "B008",   # default arg call — pydantic factories
  "UP017",  # datetime.UTC alias — we support Python 3.10 sandbox too
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["dashboard_build"]
warn_unused_ignores = true
disallow_any_generics = false
exclude = ["fixtures/"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
